@@ -1,8 +1,7 @@
 bw=${color}15${bold}BANDWIDTH${bold}${coloroff}: ${color}15${bold}(${bold}${coloroff} UP: ${xfersup} at ${throughputup} ${color}15${bold})-(${bold}${coloroff} DN: ${xfersdn} at ${throughputdown} ${color}15${bold})-(${bold}${coloroff} TOTAL: ${xfers} at ${throughput} ${color}15${bold})${bold}${coloroff}
 
-speed.pre=
-speed.post=
-speed.separator=\n
+speed.pre=pre
+speed.post=post
 speed.up=${color}15${bold}${user}${coloroff}: UP: ${file} @ ${speed} to ${slave}.
 speed.down=${color}15${bold}${user}${coloroff}: DN: ${file} @ ${speed} from ${slave}.
 speed.idle=${color}15${bold}${user}${coloroff}: IDLE: User has been idle for ${idle}.
